--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -43,7 +43,7 @@
 \null
 
 \begin{fullwidth}
-These lecture notes are part of the course material for the MSc model Research Skills, University of Freiburg (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, created \today.\\[0.5cm]
+These lecture notes are part of the course material for the MSc module Research Skills, University of Freiburg (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, version \today.\\[0.5cm]
 \end{fullwidth}
 
 \href{https://florianhartig.wordpress.com/}{Florian Hartig}\\
@@ -51,7 +51,7 @@ University of Freiburg\\
 Germany\\[0.2cm]
 If you find typos or have suggestions, please report them by creating a ticket \href{https://github.com/florianhartig/ResearchSkills/issues}{here}
 
-\paragraph{Note:} These notes are supposed to be used together with the lecture notes on statistics, latex, and the link collections that are available from the course \href{http://florianhartig.github.io/ResearchSkills/}{website}.
+\paragraph{Note:} These notes are intended to be used together with the lecture notes on statistics, latex, and the link collections that are available from the course \href{http://florianhartig.github.io/ResearchSkills/}{website}.
 
 
 \paragraph{Acknowledgments:}Severin Hauenstein for contributions to the chapter on scientific writing.
@@ -87,13 +87,13 @@ Science [mass noun] - the intellectual and practical activity encompassing the s
 Science is a process for learning about nature in which competing ideas about how the world works are measured against observation.
 \end{quote}
 
-Hence, science is a method to find out how the natural world world works based on observations. The latter distinguishes the sciences from the arts (e.g. paintings, music, dance), and from the humanities that study aspects of human culture (e.g. languages, literature, philosophy and history). The distinction between humanities and sciences has become less clear, however, because fields such as linguistics, economics or sociology are increasingly using the same formal approaches as the natural sciences. For these fields, the terms social sciences are now commonly used. 
+Science is thus a method to find out how the natural world world works, based on observations. The latter distinguishes the sciences from the arts (e.g. painting, music, dance), and from the humanities that study aspects of human culture (e.g. languages, literature, philosophy and history).\marginnote{Social sciences and natural sciences use the same approaches, but study different systems.}
+ The distinction between humanities and sciences has become blurry, however, because fields such as linguistics, economics or sociology have moved towards the same formal approaches that are used by the natural sciences. For these fields, the term "social sciences" is now commonly used. 
 
-The increasing adaptation of scientific methods also in disciplines that are not classically counted to the sciences has good reasons. In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and human well-being. As a result, science has become the most widely accepted answer to what one can know and how to find it out (epistemology), at least in the western world. 
+The increasing adaptation of scientific methods, also in disciplines that are not classically counted to the natural sciences, has good reasons.\marginnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known} In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and human well-being. As a result, science has become the most widely accepted answer to what one can know and how to find it out (epistemology), at least in the western world. 
 
-\marginnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known}
 
-But science is also a human endeavor. ``Science" may as well refer to the history of science, the state of scientific knowledge, or science as a social institution. Those latter aspects of science are less formally defined and stable that science as a method - if we look at the history of science, we see individuals that are unified by a common cause, but that are at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness.\marginnote{Many famous scientists engaged in personal and irrational feuds. For example, the doubtlessly ingenious Isaac Newton engaged in countless spiteful and bitter fights, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infinitesimal calculus.} As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is. 
+Science is also a human endeavor. ``Science" may as well refer to the history of science, the state of scientific knowledge, or science as a social institution. Those latter aspects of science are less formally defined and stable that science as a method - if we look at the history of science, we see individuals that are unified by a common cause, but that are at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness.\marginnote{Many famous scientists engaged in personal and irrational feuds. For example, the doubtlessly ingenious Isaac Newton engaged in countless spiteful and bitter fights, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infinitesimal calculus.} As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is. 
 
 In the center of science, however, remains a set of assumptions and methods, a philosophy if you will, that allows us to draw and agree on conclusions from empirical observations. Not every scientist is aware of the ``formal rules" of these methods, but that does not mean that (s)he would not apply them. In his book "Induction \& Intuition in Scientific Thought", Peter Medawar notes: 
 
@@ -101,7 +101,7 @@ In the center of science, however, remains a set of assumptions and methods, a p
 The fact that scientists do not consciously practice a formal methodology is very poor evidence that no such methodology exists. It could be said—has been said—that there is a distinctive methodology of science which scientists practice unwittingly, like the chap in Molière who found that all his life, unknowingly, he had been speaking prose.
 \end{quote}
 
-It may thus be possible to do science without having ever learned the basics of the scientific method. However, that does not mean you should not learn about the methods of science. An amateur can sometimes do great work, from intuition and practice, but without a good education s(he) may fail in other situations. Learning the rules of science will provide you with saveguards against drawing false conclusion, will teach you methods to make discovery and communication more efficient, and will arguable improve your general understanding of the world. Hence, read this manual for science with care, including the  rest of this chapter, which is devoted to laying out the assumptions and history of science, and discussing how the "scientific method" works. 
+It may thus be possible to do science without having ever learned the basics of the scientific method. However, that does not mean you should not learn about the methods of science. An amateur can sometimes do great work, from intuition and practice, but without a good education s(he) may fail in other situations. Learning the rules of science will provide you with safeguards against drawing false conclusion, will teach you methods to make discovery and communication more efficient, and will arguable improve your general understanding of the world. Hence, read this manual for science with care, including the  rest of this chapter, which is devoted to laying out the assumptions and history of science, and discussing how the "scientific method" works. 
 
 
 \section{Philosophical foundations of scientific thinking}
@@ -296,23 +296,25 @@ In the heart of all that, however, remains the idea of creating ``near-certain''
 Science today is highly specialized. Most basic questions have long been solved. You may think of the scientific enterprise as a "house of knowledge", where one story is built on the next. This is often expressed by a famous quote by Isaac Newton in a letter to 
 
 \begin{quote}
-If I have seen further it is by standing on the shoulders of Giants.\footnote{The origin of this expression dates back to at least the 12th century, but Newton's use in a letter to his rival Robert Hooke in 1676 is the most famous application. While it is generally interpreted as a sign of humility, some authors have argued that this quote was indeed meant as a personal insult against Hooke, who was hunchbacked and of slight build. Against this idea stands that Hooke and Newton, although bitter enemies later in their lives, were on good terms at this time.}
+If I have seen further it is by standing on the shoulders of Giants.\footnote{The origin of this expression dates back to at least the 12th century, but Newton's use in a letter to his rival Robert Hooke in 1676 is the most famous application. While it is generally interpreted as a sign of humility, some authors have argued that this quote was actually a personal insult against Hooke, who was hunchbacked and of slight build. Against this idea stands that Hooke and Newton, although bitter enemies later in their lives, were on good terms at this time.}
 \end{quote}
 
-Regardless of whether the quote was meant as it is interpreted today, the fact remains that scientists today are hardly explorers that go far on unmarked territory. Before you start a new research project, you should therefore find out what has already been done in on the question you are interested in, to understand better what you are doing, but also to avoid doing something that has already been done. 
+Science Newton's time, many giants and even more dwarfs have been added on the pile. Scientists today are hardly explorers that go far on unmarked territory. Most areas have been charted already, and much scientific work concentrates on refining our understanding of particular natural phenomena. 
+
+This is not to say that there are no discoveries left. You should search for the big new idea (see next section), and maybe you are lucky enough to find one. But you have to anticipate that any idea you have may have appeared to someone else as well. Before you start a new research project, you should therefore find out what has already been done in on the question you are interested in, to understand better what you are doing, but also to avoid doing something that has already been done. 
 
 
 \section{Finding relevant literature}
 
-How to search for relevant literature depends on the your field, but basically there are three main databases
+How to search for relevant literature depends on the your field. You may go into a library and open random books, check the libraries catalog, or speak with colleagues. In today's practice, however, you will likely use a search engine or database on the internet. Basically, there are three main options: 
 
 \begin{itemize}
-\item Google scholar 
-\item ISI web of knowledge (proprietory, slow, but most "official")
+\item \href{https://scholar.google.de/}{Google scholar} 
+\item \href{http://webofknowledge.com/}{ISI Web of Knowledge} (proprietory, slow, but most "official")
 \item Scopus (proprietory, competitor to ISI)
 \end{itemize}
 
-All of them work fine, with slightly different interface, search options, advantages and disadvantages. More details in our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch}{lab on literature research}. 
+All \marginnote{See lab with exercises on literature research \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch}{here}} of them work fine, with slightly different interface, search options, advantages and disadvantages. More details in our \href{https://github.com/florianhartig/ResearchSkills/tree/master/Labs/LiteratureResearch}{lab on literature research}. 
 
 \section{Organizing your literature}
 
@@ -613,23 +615,23 @@ Getting to know these fallacies has many advantages: you will train your logical
 
 \chapter{Scientific writing}
 
-As already said in the previous chapter: writing is an essential skill for an academic, as for many other professions. \marginnote{The importance of the written word does not seem to change at all in the modern world. The art of writing, similar to public speaking, seems to be one of the stable skills that one can think of.} Despite its central role, however, few master it well. Writing is a subtle art. You can read some advice, but to become a skilled and effective writer requires a long process of observation, practice and reflection: read widely, and think about why some writers appeal to you more. Look critically on your own writing, and think about the things that you can improve. The rest of this section is intended to help you start this journey. 
+Writing is an essential skill for an academic, as for many other professions. \marginnote{The importance of the written word does not seem to change at all in the modern world. The art of writing, similar to public speaking, seems to be one of the stable skills that one can think of.} Despite its central role, however, few master it well. Writing is a subtle art. You can read some advice, but to become a skilled and effective writer requires a long process of observation, practice and reflection: read widely, and think about why some writers appeal to you more. Look critically on your own writing, and think about the things that you can improve. The rest of this section is intended to help you start this journey. 
 
 \section{Some basic writing advice}
 
-\paragraph{Start writing early}Writing\marginnote{Please, follow this point in your thesis - if you don't it leads foreseeable into disaster!} structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
+\paragraph{Start writing early} Writing\marginnote{Please, follow this point in your thesis - if you don't it leads foreseeable into disaster!} structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
 
-\paragraph{Know your audience}Who\marginnote{\citet{Gopen-ScienceOfScientific-1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".} is going to read what you write?  You need to adjust your text to the knowledge and background of your audience. 
+\paragraph{Know your audience} Ask yourself: who\marginnote{\citet{Gopen-ScienceOfScientific-1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".} is going to read what you write?  You need to adjust your text to the knowledge and background of your audience. 
 
 
-\paragraph{Know what you want to say, and make a selection!}Sounds\marginnote{"If you don't know where you are going,you'll end up someplace else" (Yogi Berra).} trivial, but in my experience it isn't. Before spending hours on writing the wrong text, try to explain a friend in 5-10 min the essential points of piece, and note the structure. If you fail with this, think again about your story. Also remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. 
+\paragraph{Know what you want to say, and say only this!} Sounds\marginnote{"If you don't know where you are going,you'll end up someplace else" (Yogi Berra).} trivial, but in practice it isn't. For a good story, you need to make a selection. This is hard, and it becomes even harder if you have already put a lot of work in something that may be a dead end. Before spending hours on writing the wrong text, try to explain a friend in 5-10 min your essential points, and note the structure. If you fail with this, think again about your story. Remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. 
 
 \paragraph{Mindset} Make your goal, above all, clarity of thought and expression, and impervious logic of your argument. Read \citet{Woodford-Sounderthinkingthrough-1967}.
 
-\paragraph{Respect conventions}\marginnote{For example, the default scientific article is divided into a title, abstract, introduction, materials and methods, results and discussion. Within these structural elements there are further recognizable patterns. Maintaining this structure makes it easier to understanding of the article's messages \citep{Gopen-ScienceOfScientific-1990,Tischler-Scientificwritingbooklet-1978}} Readers, particularly experienced readers, are familiar with writing conventions expect to find arguments, sections and statements in particular positions and structures. If the writer respects these structural standards the readability is greatly improved. 
+\paragraph{Respect conventions} Readers\marginnote{For example, the default scientific article is divided into a title, abstract, introduction, materials and methods, results and discussion. Within these structural elements there are further recognizable patterns. Maintaining this structure makes it easier to understanding of the article's messages \citep{Gopen-ScienceOfScientific-1990,Tischler-Scientificwritingbooklet-1978}}, particularly experienced readers, are familiar with writing conventions expect to find arguments, sections and statements in particular positions and structures. If the writer respects these structural standards the readability is greatly improved. 
 
 
-\paragraph{Modesty} Think of a scientific text as a piece of craftsmanship, like a chair. What is expected of you is to produce a simple chair that respects the usual standards (e.g. four legs), and that is, above all, solid. You are not expected to add fancy ornamentation that might be used by an ingenious master craftsmen, and produce a entire set of furniture that would suffice to fit out a house. If you could do the later, you would gain admiration and praise, but when trying, you will nearly certainly fail to even produce the very thing you were asked for - a simple, solid chair. Bottomline: stay modest in what you want to achieve, but stay ambitions in how you achieve it!
+\paragraph{Modesty} Think of a scientific text as a piece of craftsmanship, like a chair. What is expected of you is to produce a simple chair that respects the usual standards (e.g. four legs), and that is, above all, solid. You are not expected to add fancy ornamentation that might be used by an ingenious master craftsmen, and produce a entire set of furniture that would suffice to fit out a house. You might gain admiration and praise if you did, but if trying, you will nearly certainly fail to even produce the only thing you were asked for - a simple, solid chair. Bottomline: stay modest in what you want to achieve, but stay ambitions in how you achieve it!
 
 
 \paragraph{Style} Writing is difficult. Good writing is incredibly hard. If you think writing is no problem for you, you probably haven't even realized the extent of your writing problems. Read the following section twice!
@@ -637,11 +639,11 @@ As already said in the previous chapter: writing is an essential skill for an ac
 
 \section{Style}
 
-Style is personal, and there are many small aspects of style that we cannot cover in a short introduction. However, there are 4 basic properties of style that I find are nearly always missing in undergraduate writing, and then can improve the readability of your text dramatically. 
+Style is personal, and there are many small aspects of style that we cannot cover in a short introduction. However, there are four basic aspects of style that I find are nearly always missing in undergraduate writing. Training them can improve the readability of your text dramatically. 
 
 \subsection{Sentence Structure}
 
-The first is sentence structure. A sentence has two particularly important positions - the  beginning and the end. These two positions have distinct functions \citep{Gopen-ScienceOfScientific-1990,Tischler-Scientificwritingbooklet-1978}.
+The first aspect of style is sentence structure. A sentence has two particularly important positions - the  beginning and the end. These two positions have distinct functions \citep{Gopen-ScienceOfScientific-1990,Tischler-Scientificwritingbooklet-1978}.
 
 \paragraph{The topic position} The beginning of a sentence provides us with the context. Typically, we also use it to connect to previous information.
 
@@ -704,15 +706,14 @@ Keep it simple.\footnote{Mark Twain is famous for his effective writing. A tip f
 
 \paragraph{Discussion/ Conclusion} The discussion summarizes the findings of the paper, and discusses it's implications and broader relevance. It moves from the specifics of your particular study to back to the general level. 
 
-
 \begin{enumerate}\marginnote{The discussion moves from the the specific to the general.}
-\item Questions and main findings in short
-\item Comparison to other findings
-\item Limitations and further research
-\item Conclusions, and broader impacts for science and society
-\end{enumerate}
+\item Summary of the main findings. It is common to shortly repeat the question as well. When writing this, you should keep in mind that many readers jump directly to this section when reading a paper. It should therefore stand on its own. 
+\item Comparison of your results to the findings in the literature. Here, you should discuss to what extend your results differ to or are supported by the literature. 
+\item Limitations and further research.\marginnote{Only discuss the limitations that question/limit the credibility of your results.} The goal of this part is to establish the domain under which your results are valid; do not question your approach in general, or list everything that could have been done as well. 
+\item Conclusions, broader importance for science and society, potentially outlook and urgent needs for further research. This final paragraph is very important - it provides your conclusions and outlook on the subject. 
+\end{enumerate} 
 
-The first part has the function of providing a lazy reader with the question and directly the findings of the study. The second part will discuss how these findings fit to previous research, if knowledge needs to be updated and so on. \marginnote{Only discuss the limitations that question/limit the credibility of your results.} You will then typically proceed to limitations of your approach. The goal is to establish the domain under which your results are valid; do not question your approach in general, or list everything that could have been done as well. The final paragraph is very important - it provides your conclusions and outlook on the subject. 
+
 
 \section{Showcase: A commented paper}
 
@@ -776,7 +777,7 @@ This section is typically divided into
 
 \noindent\textbf{Results}\\
 
-The presentation of the results should follow the questions at the end of the introduction. If you had three questions, you would typically make three subsections.
+The presentation of the results should follow the questions at the end of the introduction. If you had three questions, you would typically make three subsections. You can shortly repeat the question. 
 
 \noindent\textbf{Discussion}\\
 In this study\marginnote{Summarize main conclusions}, we used method X to test whether prevalence of A is associated to factor B. Our main result is that there is a significant correlation of B with A. This correlation, however, was only found when factor C was also present.
@@ -800,7 +801,7 @@ In conclusion\marginnote{End with conclusions and wider importance for science a
 	\item Do not make statements that are unnecessary for your argument, but could be questioned. 
 	Example: "The two most classic games to simulate the behavior of animals are the Hawk-Dove game and the Prisoner's Dilemma." $\rightarrow$ Others might disagree. Is it really important to be so definite here? Why not say: "Two classic games..."?
 	\item Passive/ Active: See the comments in the lecture notes on scientific writing. In general you should write in an active voice, unless  1) Sentence structure C3 takes precedence, or 2) the thing you talk about is impersonal, was done by another person. More details in the lecture notes. In particular, opinions of your own \textsc{should} be active.
-	\item Be definite - remember Yoda: There is no try, do it. Phrases like: "we attempted to find whether there is" or "this study aims at" sound weak and defensive. Write "we studied whether ...". Also: "to the best of our knowledge ... " This is a borderline case. You will see this expression in scientific articles, and it's OK to use it. However, it does seem insecure. Better to indicate that you made some effort to find out together with such an expression. 	
+	\item Be definite - remember Yoda: There is no try, do it. Phrases like: "we attempted to find whether there is" or "this study aims at" sound weak and defensive. Write "we studied whether ...". Another candidate, which is a borderline case: "to the best of our knowledge ... " You will see this expression in scientific articles, and it's OK to use it. However, it does seem insecure. Better to indicate that you made some effort to find out together with such an expression. 	
 	
  
 
@@ -912,7 +913,9 @@ Many\marginnote{The rules of the German Science Foundation (DFG) are available \
 \textbf{Repetition of central concepts in this chapter:} 
 
 \begin{itemize*}
-  \item Read and follow the rules of good scientific practice 
+  \item Read the style advise
+  \item Follow convention
+  \item Revise revise revise
 \end{itemize*}
 
 \end{mdframed}
