Cleanup labs / moved stats scrip

--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -69,7 +69,8 @@ This work is licensed under a Creative Commons Attribution-NonCommercial-NoDeriv
 \newpage
 
 
-
+% other books Flick-Introducingresearchmethodology-2015
+% check out also http://www.buecher.de/shop/fachbuecher/introducing-research-methodology-ebook-pdf/flick-uwe/products_products/detail/prod_id/38405557/
 
 \chapter{Logic and philosophy of science}
 
@@ -615,16 +616,18 @@ Getting to know these fallacies has many advantages: you will train your logical
 
 \chapter{Scientific writing}
 
-Writing is an essential skill for an academic, as for many other professions. \marginnote{The importance of the written word does not seem to change at all in the modern world. The art of writing, similar to public speaking, seems to be one of the stable skills that one can think of.} Despite its central role, however, few master it well. Writing is a subtle art. You can read some advice, but to become a skilled and effective writer requires a long process of observation, practice and reflection: read widely, and think about why some writers appeal to you more. Look critically on your own writing, and think about the things that you can improve. The rest of this section is intended to help you start this journey. 
+Writing is an essential skill for an academic, as for many other professions. \marginnote{The importance of the written word does not seem to change at all in the modern world. The art of writing, similar to public speaking, seems to be one of the stable skills that one can think of.} Despite its central role, however, few master it well. Writing is a subtle art. It is likely useful to consider for writing advice of the sort given in this chapter, but do not fool yourself - becoming a skilled and effective writer will only result from a long process of observation, practice and reflection: read widely, and think about why some writers appeal to you more. Reflect critically on your own writing, and think about the things that you can improve. Write every day, with the dedication to do your best. The rest of this section is intended to help you start this journey. 
 
 \section{Some basic writing advice}
 
-\paragraph{Start writing early} Writing\marginnote{Please, follow this point in your thesis - if you don't it leads foreseeable into disaster!} structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
+\paragraph{Start writing early, and all the time} Writing\marginnote{My experience - not following this advice in a graduate thesis leads foreseeable into disaster!} structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
+
+% add emptions / writers block, Boice-Advicenewfaculty-
 
 \paragraph{Know your audience} Ask yourself: who\marginnote{\citet{Gopen-ScienceOfScientific-1990} state "it matters only whether a large majority of the reading audience accurately perceives what the author had in mind".} is going to read what you write?  You need to adjust your text to the knowledge and background of your audience. 
 
 
-\paragraph{Know what you want to say, and say only this!} Sounds\marginnote{"If you don't know where you are going,you'll end up someplace else" (Yogi Berra).} trivial, but in practice it isn't. For a good story, you need to make a selection. This is hard, and it becomes even harder if you have already put a lot of work in something that may be a dead end. Before spending hours on writing the wrong text, try to explain a friend in 5-10 min your essential points, and note the structure. If you fail with this, think again about your story. Remember: Writing a good paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. 
+\paragraph{Know what you want to say, and say only this!} Sounds\marginnote{"If you don't know where you are going,you'll end up someplace else" (Yogi Berra).} trivial, but in practice it isn't. For a good story, you need to make a selection. This is hard, and it becomes even harder if you have already put a lot of work in something that may be a dead end. Before spending hours on writing the wrong text, try to explain a friend in 5-10 min your essential points, and note the structure. If you fail with this, think again about your story. Remember: Writing a good scientific paper is not about telling everything you know or have done about a topic -- it is about telling a story and selecting the relevant details. 
 
 \paragraph{Mindset} Make your goal, above all, clarity of thought and expression, and impervious logic of your argument. Read \citet{Woodford-Sounderthinkingthrough-1967}.
 
@@ -831,6 +834,16 @@ In conclusion\marginnote{End with conclusions and wider importance for science a
 	\item Wrong use of \textbf{which and that} Let's say that we have 10 samples. Compare the two sentences: 1) the samples, which were expose to radiation the day before, were analysed. 2) The samples that were exposed to radiation the day before were analyzed. The important difference is that 1) says all samples were exposed to radiation and then analysed, while 2) implies that not all samples were exposed to radiation, and only those that were were analysed. 1) is called a non-restrictive clause, and 2) is called a restrictive clause. "that" always implies a restrictive meaning. Additional confusion, however, is created by the fact that "which" can in fact be used for both, with a minor modification: if you want to use which restrictive, you have to write 3) The samples which were exposed to radiation the day before were analyzed. Notice that there is a tiny difference to 1) - there is no comma before which. This is the only indicator that allows us to know whether the restrictive or the non-restrictive meaning is implied. Many people are not aware of this difference though. In prose, the distinction may matter little, but for science, my opinion is that clarity goes before style, and I therefore recommend to strictly stay with 1) which for non-restrictive and 2) that for the restrictive meaning.
 \end{enumerate}
 
+\item Emotional problems
+
+\begin{enumerate}
+	\item 
+\end{enumerate}
+
+
+
+
+Boice-Advicenewfaculty-2000
 
 
 \end{enumerate}
